manifests/elasticsearch/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    stack: logging
spec:
  rules:
  - host: __INGRESS_HOST__
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
